# e_commerce-api

./: README.md
app/: pyproject.toml
user_service/: README.md
user_service/app/: main.py  settings.py
user_service/app/db/: db_connector.py
user_service/app/model/: user_model.py
